support delete job
